[package]
authors = ["Y. D. Santos <yds12@protonmail.com>"]
name = "inquisitor-core"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Simple and fast load testing library"
homepage = "https://github.com/yds12/inquisitor"
repository = "https://github.com/yds12/inquisitor"
readme = "README.md"
documentation = "https://docs.rs/inquisitor-core/latest/"
keywords = ["load-testing", "stress-testing", "api", "http", "performance"]
categories = ["development-tools", "development-tools::profiling",
"network-programming", "web-programming", "command-line-utilities"]

[dependencies]
futures = "0.3"
reqwest = "0.11"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
regex = "1"
hdrhistogram = "7"
ctrlc = { version = "3.0", features = ["termination"] }
